--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "helplightning-contacts",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,10 +7,16 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^14.1.1",
+    "ag-grid-community": "^30.0.6",
+    "ag-grid-react": "^30.0.6",
+    "axios": "^1.4.0",
+    "ramda": "^0.29.0",
     "react": "^18.2.0",
+    "react-bootstrap": "0.33",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.64.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
