--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^14.1.1",
-    "ag-grid-community": "^30.0.6",
-    "ag-grid-react": "^30.0.6",
+    "ag-grid-community": "^20.0.0",
+    "ag-grid-react": "^20.0.0",
     "axios": "^1.4.0",
     "ramda": "^0.29.0",
-    "react": "^18.2.0",
+    "react": "17.0.2",
     "react-bootstrap": "0.33",
-    "react-dom": "^18.2.0",
+    "react-dom": "17.0.2",
     "react-redux": "^8.0.1",
     "react-scripts": "5.0.1",
     "sass": "^1.64.2",
