--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "main": "dist/contacts.js",
-  "engines": {
-    "node": ">=14.15.4"
-  },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
@@ -20,7 +17,6 @@
     "react-bootstrap": "0.33",
     "react-dom": "17.0.2",
     "react-redux": "^8.0.1",
-    "react-scripts": "5.0.1",
     "sass": "^1.64.2",
     "svg-sprite-loader": "^6.0.11",
     "svgo": "^2.8.0",
@@ -53,6 +49,14 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.22.10",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-env": "^7.22.10",
+    "@babel/preset-react": "^7.22.5",
+    "babel-loader": "^9.1.3",
+    "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3",
+    "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   }
 }
